added ping and health test, added security config, and updated docs